src/test/ForWrongTypes/ForWrongTypes.expected
error: ForWrongTypes.panda:1:5: loop index must be an integer
error: ForWrongTypes.panda:3:13: elements of panda.collections.Array<panda.core.Int32> cannot be converted to panda.core.String
2 errors
