src/test/ForWrongTypes/ForWrongTypes.panda
for i:String, v:Int in 1 .. 10 {
}
for i:Int8, v:String in 1 .. 10 {
}
for v:Object in 1 .. 10 {
}